--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "homepage": "https://github.com/IonicaBizau/node-gry",
   "dependencies": {
-    "exec-limiter": "^2.0.0",
-    "ul": "^5.0.0",
-    "one-by-one": "^2.0.0"
+    "exec-limiter": "^3.0.0",
+    "one-by-one": "^2.0.0",
+    "ul": "^5.0.0"
   },
   "blah": {
     "h_img": "http://i.imgur.com/vPz8gkX.png"
