--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/IonicaBizau/node-gry",
   "dependencies": {
+    "abs": "^1.2.1",
     "exec-limiter": "^3.0.0",
-    "one-by-one": "^2.0.0",
+    "one-by-one": "^3.0.0",
     "ul": "^5.0.0"
   },
   "blah": {
