:arrow_up: 5.0.7 :tada:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gry",
-  "version": "5.0.6",
+  "version": "5.0.7",
   "description": "A minimalist NodeJS wrapper for the `git` commands. `gry` stands for the Git RepositorY.",
   "main": "lib/index.js",
   "directories": {
@@ -44,6 +44,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
